    * FIX: ListOfStrings Fields now correctly autoappend on focus
    * FIX: Reloading of sidebar after activate changes
    * FIX: Main Frame without sidebar: reload after activate changes
    * FIX: output_format json: handle newlines correctly
    * FIX: handle ldap logins with ',' in distinguished name
    * FIX: quote HTML variable names, fixes potential JS injection
    
    WATO:
    * FIX: Fixed generated manual check definitions for checks without items
      like ntp_time and tcp_conn_stats
    * FIX: Persisting changing of folder titles when only the title has changed
    * Add: Creating a new rule immediately opens its edit formular
    * The rules formular now uses POST as transaction method
    * Modularized the authentication and user management code
    * Default config: add contact group 'all' and put all hosts into it
    * Reverse order of Condition, Value and General options in rule editor

    Event Console:
    * FIX: fix exception in rules that use facility local7
    * FIX: fix event icon in case of using TCP access to EC
    * FIX: Allowing ":" in application field (e.g. needed for windows logfiles)
    * FIX: fix bug in Filter "Hostname/IP-Address of original event"
    * Replication slave can now copy rules from master into local configuration
      via a new button in WATO.
    * Speedup access to event history by earlier filtering and prefiltering with grep
    * New builtin syslog server! Please refer to online docu for details.
    * Icon to events of host links to view that has context button to host
    * FIX: remove event pipe on program shutdown, prevents syslog freeze
    * FIX: hostnames in livestatus query now being utf8 encoded

1.2.1i3:
    Core:
    * added HOST/SERVICEPROBLEMID to notification macros
    * New configuration check_periods for limiting execution of
      Check_MK checks to a certain time period.

    Checks & Agents:
    * Windows agent: persist offsets for logfile monitoring

    Notifications: